<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kilometro</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My message</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_example">Action example</string>
    <string name="title_activity_add_run">AddRunActivity</string>
    <string name="title_activity_course_list_view">CourseListViewActivity</string>

    <string name="icon_plus">&#xf067;</string>
    <string name="icon_list">&#xf0ca;</string>
    <string name="icon_pdf">&#xf1c1;</string>
    <string name="icon_chart">&#xf200;</string>

    <string name="add_action">Ajouter</string>
    <string name="list_action">Liste des trajets</string>
    <string name="export_action">Exporter en PDF</string>
    <string name="stats_action">Voir les statistiques</string>
    <string name="title_activity_export">ExportActivity</string>
    
    <string name="bad_values_alert_dialog_title">Mauvaises valeurs</string>
    <string name="bad_values_alert_dialog_message">Le kilometrage d'arrivee est inferieur au kilometrage de depart.</string>
    <string name="add_success_alert_dialog_title">Ajoute</string>
    <string name="add_success_alert_dialog_message">Trajet ajoute avec succes.</string>
    <string name="edit_success_alert_dialog_title">Modifie</string>
    <string name="edit_success_alert_dialog_message">Trajet modifie avec succes.</string>

    <string name="wip">Cette page est en cours de construction !</string>
    <string name="title_activity_charts">ChartsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="add">Ajouter</string>
    <string name="exporter">Exporter</string>
    <string name="sendvia">Envoyer via</string>
    <string name="pick_date">Choisir date</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="from">Du</string>
    <string name="to">au</string>
    <string name="add_course">Ajouter un trajet</string>

</resources>
