<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="narthe.compteur_km.ExportActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ff1a2530">

    <Button
        android:id="@+id/fromDatePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:onClick="showDatePickerDialog" />

    <TextView android:id="@+id/fromDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/toDatePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:onClick="showDatePickerDialog" />

    <TextView android:id="@+id/toMyDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/customEditButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exporter"
        android:id="@+id/exportButton"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp" />

</LinearLayout>
